<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNazivEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/naziv"
                android:textAllCaps="true"
                android:textSize="34sp"
                android:textStyle="bold" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="550dp">


                <com.example.ajdin.navigatiodraer.adapters.WrapContentHeightViewPager
                    android:layout_width="match_parent"
                    android:id="@+id/viewPager2Edited"
                    android:layout_height="match_parent">

                </com.example.ajdin.navigatiodraer.adapters.WrapContentHeightViewPager>

                <!--<ImageView-->
                <!--android:id="@+id/ivIcon"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="400dp"-->
                <!--android:scaleType="centerCrop"-->
                <!--android:adjustViewBounds="true"-->
                <!--android:src="@drawable/avengers" />-->

                <ProgressBar
                    android:id="@+id/progressBarEdited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"

            >
            <!--android:background="@drawable/rounded_bg"-->

            <TextView
                android:id="@+id/tvCijenaEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cijena"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/tvJedinicaMjereEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/kategorija"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tvStanjeDetaljiEdited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/stanje"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="italic" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="16dp"

            android:paddingRight="16dp"

            android:paddingTop="4dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/txEdited"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:gravity="center"
                android:text="@string/kolicinaDetalji"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:textStyle="italic"
                android:imeOptions="actionDone"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <EditText
                android:id="@+id/quantityEdited"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:ems="5"
                android:hint="@string/unos_kolicine"
                android:inputType="number|numberDecimal"
                android:paddingLeft="10sp"
                android:text=""
                android:imeOptions="actionDone"
                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/linearLayout"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:id="@+id/linearLayout2"
            android:paddingTop="0dp"
            android:weightSum="1">


            <TextView
                android:id="@+id/txCijEdited"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.36"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/text_nova_cijena"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"

                android:textStyle="italic"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <EditText
                android:id="@+id/new_priceEdited"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.47"
                android:ems="5"
                android:focusable="true"
                android:hint="@string/hint_cijena"
                android:inputType="number|numberDecimal"
                android:paddingLeft="8dp"
                android:text=""
                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llActionEdited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"

            android:weightSum="0.40">

            <!--<TextView-->
            <!--android:id="@+id/textView2"-->
            <!--android:layout_width="0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.3"-->
            <!--android:textSize="17dp"-->
            <!--android:gravity="center_vertical|end"-->
            <!--android:text="@string/quantity" />-->

            <!--<Spinner-->
            <!--android:id="@+id/spQuantity"-->
            <!--android:layout_width="0dip"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.25"/>-->

            <Button
                android:id="@+id/bOrderEdited"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_weight="0.4"
                android:background="@android:color/holo_orange_light"
                android:text="@string/order"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textAllCaps="true"
                android:textStyle="normal"
                android:textColor="@color/primaryTtext"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


